changes get first to get(0)